# ss-analysis

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: PROJECT.md
src/ss_analysis/: check_engine.py  cli.py  data.py  html_report.py  http_context.py  http_probe.py  port_spec.py  scan.py
tests/: test_cli_ports.py  test_html_report.py  test_port_spec.py
